# tg_prices_alert

./: Cargo.toml
src/: args.rs  main.rs
