[package]
name = "tg_prices_alert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"
ftx = "0.5.0"
futures = "0.3.24"
teloxide = { version = "0.11", features = ["macros"] }
tokio = { version = "1.21.2", features = ["full"] }
